kubernetes/prometheus/prometheus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.101.70
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app: prometheus

---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-service
  namespace: monitoring
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.101.71
  ports:
  - name: web
    port: 9093
    targetPort: web
  selector:
    alertmanager: main

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.techcasa.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              name: web
